# voicevox-wrapper

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/voicevoc_wrapper/: __init__.py
voice/: Cargo.toml
voice/src/: main.rs
vv/: Cargo.toml
vv/src/: lib.rs  main.rs  vv.rs
vv/src/vv/: sound.rs  voicevox.rs
vv/src/vv/platform/: twitch.rs
