[project]
name = "voicevoc-wrapper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yu Kobayashi", email = "yuu.meiji.gkb@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/voicevoc_wrapper"]

[tool.ruff]
line-length = 119
select = [
    "F",
    "E",
    "C90",
    "I",
    "N",
    "UP",
    "PL",
]
